feat: company cost limits - clean up